# CertShield

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  patch-1.py  pyproject.toml
agent/windows/: CertShield-MonitoringAgent.ps1  CertShieldMonitoringAgent.ps1  Install-CertShieldMonitoringAgent.ps1  Uninstall-CertShieldMonitoringAgent.ps1
app/: main.py
app/core/: config.py  security.py
app/db/: migrate.py  session.py
deploy/: nginx.conf
docs/: API.md  CERTSHIELD_CURRENT_STATE.md  collectors.md
fixtures/: sample_scan.json
migrations/: 001_init.sql
scripts/: fresh_install_linux.sh  install_linux.sh  install_or_upgrade_linux.sh  seed_demo_scan.sh  upgrade_linux.sh  validate_migrations.py
systemd/: certshield.service
tests/: conftest.py  test_advanced_risk_engine.py  test_assessment_registry_classification.py  test_assurance_governance_consistency.py  test_best_practices.py  test_collector_v18.py  test_environment.py  test_environment_isolation.py  test_governance_evidence.py  test_health.py  test_health_assessment.py  test_health_coverage.py  test_health_expiry_watch.py  test_hierarchy_ca_inventory.py  test_ingest_api.py  test_monitoring_agent.py  test_monitoring_page.py  test_pdf_report.py  test_phase2_acceptance.py  test_pki_hierarchy.py  test_posture_assessment.py  test_posture_governance_consolidation.py  test_posture_page_wiring.py  test_registry_ca_deduplication.py  test_risk_engine.py  test_security.py  test_simulation.py  test_template_finding_wiring.py  test_template_owner_aggregation.py  test_validation_engine.py  test_validation_models.py  test_validation_reports.py  test_validation_routes.py  test_validation_safety.py
(+47 files in other folders)
