[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certshield"
version = "0.2.0"
description = "Defensive ADCS security assessment and visibility platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<0.116",
  "uvicorn[standard]>=0.30,<0.32",
  "jinja2>=3.1,<4",
  "sqlalchemy>=2.0,<2.1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "python-multipart>=0.0.9,<0.1",
  "itsdangerous>=2.2,<3",
  "httpx>=0.27,<0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.5,<0.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 240

[tool.ruff.lint]
select = ["E", "F", "I"]
